Restore logging (#6)
* Bump versions, use custom logger

* Restore logging

* Don’t throw exception for Map

* Use Map.class instead of name